[gd_scene load_steps=4 format=3 uid="uid://b2rwg4lktq47h"]

[ext_resource type="PackedScene" uid="uid://e6hkedahwcbx" path="res://src/player.tscn" id="1_itx4x"]
[ext_resource type="Script" path="res://src/match.gd" id="1_kh7pv"]
[ext_resource type="PackedScene" uid="uid://clahdygoww5yy" path="res://src/game_timer.tscn" id="3_14ieh"]

[node name="Match" type="Node2D"]
script = ExtResource("1_kh7pv")

[node name="ServerPlayer" parent="." instance=ExtResource("1_itx4x")]
fixed_position_x = 13107200
fixed_position_y = 26214400
position = Vector2(200, 400)

[node name="ClientPlayer" parent="." instance=ExtResource("1_itx4x")]
fixed_position_x = 52428800
fixed_position_y = 26214400
position = Vector2(800, 400)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UhOhLabel" type="Label" parent="CanvasLayer"]
offset_left = 478.0
offset_top = 57.0
offset_right = 518.0
offset_bottom = 80.0

[node name="MessageLabel" type="Label" parent="CanvasLayer"]
offset_right = 1151.0
offset_bottom = 54.0
horizontal_alignment = 1

[node name="ResetButton" type="Button" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -54.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "MAIN MENU"

[node name="SyncLostLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.5
offset_top = -21.0
offset_right = 35.5
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameTimer" parent="." instance=ExtResource("3_14ieh")]

[connection signal="pressed" from="CanvasLayer/ResetButton" to="." method="_on_reset_button_pressed"]
